--- a/styles/style.css
+++ b/styles/style.css
@@ -91,3 +91,14 @@ font-weight: 400;
     background: #FFF8F3;
     margin: 130px 150px;
 }
+main{
+    max-width: 1350px;
+    margin: 0 auto;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
