--- a/styles/style.css
+++ b/styles/style.css
@@ -102,3 +102,28 @@ main{
 .about-info{
     text-align: center;
 }
+#description{
+    padding: 30px 130px;
+}
+
+/* skills related styles */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description{
+    color: #757575;
+}
+/* resume section styles */
+.resume-column-title{
+    color: var(--Dark-02, #474747);
+    font-size: 30px;
+    font-weight: 700;
+}
