--- a/styles/style.css
+++ b/styles/style.css
@@ -134,6 +134,9 @@ main{
     color: var(--Dark-03, #757575);
     line-height: 28px;
 }
+.resume-column{
+    width: 50%;
+}
 .resume-column-title{
     color: var(--Dark-02, #474747);
 font-size: 25px;
@@ -150,4 +153,32 @@ font-weight: 700;
 .download-cv{
     text-align: center;
     margin-top: 50px;
+}
+/* footer style */
+footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 230px;
+    margin-top: 100px;
+    gap: 100px;
+}
+.footer-column{
+    width: 50%;
+}
+.contact input, textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #474747;
+    border-radius: 5px;
+    background: var(--White-Color, #FFF);
+    border: 0;
+    width: 100%;
+    
+}
+.section-des{
+    text-align: left;
+}
+.social-links a{
+    margin-right: 25px;
 }
