full website done

--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,7 @@ line-height: normal;
 }
 .b-content{
     max-width: 500px;
-    
+    margin-left: 170px;
 }
 /* Main section styles */
 /* About section styles */
